[gd_scene load_steps=6 format=2]

[ext_resource path="res://resoure/root/root.tres" type="Texture" id=1]
[ext_resource path="res://node/root/root.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]

[node name="root" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="node0" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="node0"]
position = Vector2( 0, -64 )
shape = SubResource( 1 )

[node name="node1" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="node1"]
position = Vector2( -64, 0 )
shape = SubResource( 2 )

[node name="node2" type="Area2D" parent="."]
position = Vector2( -64, 0 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="node2"]
position = Vector2( 64, 64 )
shape = SubResource( 3 )

[connection signal="area_entered" from="node0" to="." method="_on_node0_area_entered"]
[connection signal="area_entered" from="node1" to="." method="_on_node1_area_entered"]
[connection signal="area_entered" from="node2" to="." method="_on_node2_area_entered"]
